Se maqueto, listo el menu y se empieza con la portada

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Blog Fronted</title>
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
+	<header>
+	<a class="logo" href="http://smoo.eshost.com.ar">
+		<img src="img/logo.png" height="50">
+	</a>
+		<nav>
+			<ul>
+				<li><a href="">Inicio</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">Tecnologias Nuevas</a></li>
+				<li><a href="">Contactenos</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section class="blog">
+		<article class="portada">
+			<img src="https://www.elespectador.com/sites/default/files/airplane-2619434_1920-1_0.jpg" width="100%">
+			<div class="description">
+				<h1>Google flights, el buscador de tiquetes aéreos que ya está en Colombia</h1>
+			</div>
+		</article>
+		<section>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="32%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+		</section>
+	</section>
 </body>
 </html>
