Listo los item de los Blog

--- a/index.html
+++ b/index.html
@@ -27,9 +27,39 @@
 				<h1>Google flights, el buscador de tiquetes aéreos que ya está en Colombia</h1>
 			</div>
 		</article>
-		<section>
+		<section class="blog-items">
 			<article class="item-blog">
-				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="32%">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
+				<div class="description">
+					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
+				</div>
+			</article>
+			<article class="item-blog">
+				<img src="https://www.elespectador.com/sites/default/files/styles/teaser_custom_user_md_1x/public/304668426_1-28-1.jpg?itok=_4iQrItn&timestamp=1521147970" width="100%">
 				<div class="description">
 					<h3>Spotify se lanza al agua con su entrada a bolsa, que será el 3 de abril</h3>
 				</div>
