Lista la version beta con el paginador y el header

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 	<a class="logo" href="http://smoo.eshost.com.ar">
 		<img src="img/logo.png" height="50">
 	</a>
+	<div class="header-right">
 		<nav>
 			<ul>
 				<li><a href="">Inicio</a></li>
-				<li><a href="">Blog</a></li>
+				<li><a href="" class="is-active">Blog</a></li>
 				<li><a href="">Tecnologias Nuevas</a></li>
 				<li><a href="">Contactenos</a></li>
 			</ul>
 		</nav>
+		<a href="" class="button red">Inicia Sesión</a>
+	</div>
 	</header>
 	<section class="blog">
 		<article class="portada">
@@ -65,6 +68,17 @@
 				</div>
 			</article>
 		</section>
+		<div class="paginador">
+		<span>Página 1 de 25</span>
+			<ul>
+				<li class="selected"><a href="">1</a></li>
+				<li><a href="">2</a></li>
+				<li><a href="">3</a></li>
+				<li><a href="">4</a></li>
+				<li><a href="">Siguiente</a></li>
+				<li><a href="">Última página</a></li>
+			</ul>
+		</div>
 	</section>
 </body>
 </html>
